--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 -->
 <html>
 	<head>
+        <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KLS56QC6X"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-1KLS56QC6X');
+            </script>
 		<title>Chris Channells | Bio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
