--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 							<ul class="icons">
 								<li><a href="mailto:chrischannells@gmail.com?subject=Personal Website" class="icon fa-envelope">E-Mail</a></li>
 								<li><a href="https://www.linkedin.com/in/chrischannells/" class="icon brands fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://github.com/ChrisChannells" class="icon brands fa-github">github</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -91,7 +92,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Chris Channells - 2020</li>
+							<li>&copy; Chris Channells - 2023</li>
 						</ul>
 					</footer>
 
